# exifedit

./: .gitignore  Cargo.toml  README.md  build.rs  resources.rc
resources/: resources.rc  resources.res
src/: data_handler.rs  handling_images.rs  image_database.rs  loading_and_manipulating_data.rs  main.rs  standard_values.rs  tag_store.rs  type_conversion.rs
ui/: appwindow.slint  carousel_tile.slint  palette.slint
