[package]
name = "exifedit"
version = "0.1.0"
authors = ["ToXiCRising <an12g3@gmx.de>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9"
lazy_static = "1.4.0"
native-dialog = "0.7.0"
slint = "1.4"

[build-dependencies]
slint-build = "1.4"
